--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
 .jumbotron-fluid img {
     width: 150px;
     border-radius: 50%;
+    border: 4px solid white;
 }
 
 .jumbotron-fluid h1 {
@@ -58,7 +59,7 @@ body {
 }
 
 .jumbotron-fluid i:hover {
-    color: var(--hover-color);
+    color: rgb(0, 249, 112);
 }
 
 .row {
@@ -72,6 +73,7 @@ body {
 
 
 /* Skills section */
+/* contact/about */
 
 /* flex Container */
 .container1 {
@@ -79,6 +81,36 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.card h5 {
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.cardInfo {
+    margin-bottom: 10px;
+}
+
+.cardInfo h6 {
+    display: inline;
+    border-bottom: 2px solid black;
+}
+
+.links {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.links img {
+    width: 45px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.cardContact h6 {
+    font-weight: bold;
+    
 }
 
 /* Flex Items */
@@ -147,3 +179,6 @@ footer {
     color: white;
     background-color: #333842;
 }
+
+
+
