--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ body {
     margin: 10px;
     padding: 5px;
     font-size: 20px;
+    transition: transform .8s ease-in-out;
+}
+
+.navbar h1:hover {
+    transform: rotate(360deg);
 }
 
 /* about section */
@@ -176,13 +181,31 @@ body {
 footer {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    /* padding: 20px; */
     text-align: center;
     font-size: 18px;
     background-color: var(--accent-color);
     color: white;
   }
 
+  footer a {
+    align-items: center;
+    /* background-color: #ba02ae; */
+    color: rgb(12, 255, 223);
+    /* margin: 0px 5px 0px 5px; */
+  }
+
+  footer a:after {
+    content: " | ";
+    color: #ccc;
+    display: inline-block;
+    font-size: 100%;
+    margin: 0 0 0 .5em;
+    }
+
+    footer a:last-child:after {
+        content: " ";
+    }
 
 /* Buttons */
 
