--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,15 @@ body {
 :root {
     --accent-color: #202125;
     --hover-color: #ff02c0;
+    --primary-color: white;
+    --secondary-color: grey;
 }
+
+/* navbar */
 
 .navbar h1 {
     color: white;
-    border: 2px solid white;
+    border: 2px solid var(--primary-color);
     margin: 10px;
     padding: 5px;
     font-size: 20px;
@@ -29,6 +33,30 @@ body {
     transform: rotate(360deg);
 }
 
+.customNav {
+    height: 100px;
+    background-color: var(--accent-color);
+}
+
+#navbarNavDropdown {
+    background-color: #202125;
+    opacity: 0.9;
+}
+
+#navbarNavDropdown ul {
+    margin: 20px;
+} /* display: none; */
+
+.dropdown-menu {
+    background-color: var(--accent-color);
+}
+
+.dropdown-menu a {
+    color: var(--primary-color);
+}
+
+
+
 /* about section */
 
 .jumbotron-fluid {
@@ -36,14 +64,14 @@ body {
     border-radius: 15px;
     /* background-color: var(--accent-color); */
     background-image: linear-gradient(45deg, #320049 10%, #ba02ae 50%, #fc4eff 100%);
-    color: white;
+    color: var(--primary-color);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
 }
 
 .jumbotron-fluid img {
     width: 150px;
     border-radius: 50%;
-    border: 4px solid white;
+    border: 4px solid var(--primary-color);
 }
 
 .jumbotron-fluid h1 {
@@ -69,11 +97,6 @@ body {
 
 .row {
     margin: 20px;
-}
-
-.navbar {
-    height: 100px;
-    background-color: var(--accent-color);
 }
 
 .card img {
@@ -153,11 +176,6 @@ body {
     background-color: var(--hover-color);
 }
 
-
-
-
-
-
 .work h1 {
     font-size: 30px;
     text-align: center;
@@ -177,6 +195,8 @@ body {
     margin: 10px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
 }
+
+/* Footer */
 
 footer {
     display: flex;
